--- a/src/react_TS/4_MasonryGrid/css/masonry-grid-column.css
+++ b/src/react_TS/4_MasonryGrid/css/masonry-grid-column.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=masonry-grid-column.css.map */
+.masonry-grid-column {
+  font-size: 0;
+}
+/*# sourceMappingURL=masonry-grid-column.css.map */
