--- a/src/react_TS/4_MasonryGrid/css/masonry-grid-column.sass
+++ b/src/react_TS/4_MasonryGrid/css/masonry-grid-column.sass
@@ -1,4 +1,3 @@
-// .masonry-grid-column
-//     // background-color: royalblue
-//     height: 50px
-//     width: 100%
+.masonry-grid-column
+    font-size: 0
+
