--- a/src/react_TS/4_MasonryGrid/css/grid-wrapper.css
+++ b/src/react_TS/4_MasonryGrid/css/grid-wrapper.css
@@ -1,5 +1,9 @@
 .grid-wrapper {
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (25%)[4];
+      grid-template-columns: repeat(4, 25%);
+  -ms-grid-rows: masonry;
+      grid-template-rows: masonry;
 }
 /*# sourceMappingURL=grid-wrapper.css.map */
