--- a/src/react_TS/4_MasonryGrid/css/App.sass
+++ b/src/react_TS/4_MasonryGrid/css/App.sass
@@ -6,4 +6,12 @@
 body
     color: royalblue
 
-    
+.grid-wrapper
+    .masonry-grid
+        display: grid
+        .masonry-grid-column
+            font-size: 0
+            .masnory-grid-cell
+                img
+                    padding: 10px
+                    max-width: 100%
