--- a/src/react_TS/5_Modal/css/modal.css
+++ b/src/react_TS/5_Modal/css/modal.css
@@ -15,25 +15,30 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 5vh 10vw;
 }
 
 .modal .header {
-  background-color: white;
+  background-color: #777;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 90vh;
-  width: 90vw;
+  height: 10vh;
+  width: 100%;
 }
 
 .modal .header .title {
@@ -46,5 +51,37 @@ body {
   color: royalblue;
   padding: 20px;
   font-size: 40px;
+}
+
+.modal .content {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 100%;
+  background-color: #777;
+  color: limegreen;
+  padding: 20px;
+}
+
+.modal .footer {
+  height: 10vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #777;
+}
+
+.modal .footer button {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  padding: 5px 20px;
+  margin-right: 20px;
 }
 /*# sourceMappingURL=modal.css.map */
