--- a/src/react_TS/5_Modal/css/modal.sass
+++ b/src/react_TS/5_Modal/css/modal.sass
@@ -9,16 +9,18 @@ body
     height: 100vh
     width: 100vw
     display: flex
+    flex-direction: column
     justify-content: center
     align-items: center
-    background-color: rgba(0,0,0,0.5)
+    background-color: rgba(0,0,0,0.8)
+    padding: 5vh 10vw
     // position: relative
     .header
-        background-color: white
+        background-color: #777
         display: flex
         justify-content: space-between
-        height: 90vh    
-        width: 90vw
+        height: 10vh    
+        width: 100%
         .title
             color: royalblue
             padding: 20px
@@ -27,5 +29,25 @@ body
             color: royalblue    
             padding: 20px
             font-size: 40px
+    .content
+        flex-grow: 1    
+        width: 100%
+        background-color: #777
+        color: limegreen
+        padding: 20px
+    .footer
+        height: 10vh
+        width: 100%
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        background-color: #777
+        button
+            align-self: flex-end
+            padding: 5px 20px
+            margin-right: 20px
+
+
+
 
     
