--- a/src/react_TS/5_Modal/css/modal.sass
+++ b/src/react_TS/5_Modal/css/modal.sass
@@ -29,6 +29,7 @@ body
             color: royalblue    
             padding: 20px
             font-size: 40px
+            cursor: pointer
     .content
         flex-grow: 1    
         width: 100%
