--- a/src/react_TS/5_Modal/css/modal.css
+++ b/src/react_TS/5_Modal/css/modal.css
@@ -6,12 +6,17 @@
 }
 
 body {
-  background-color: white;
+  background-color: #333;
 }
 
 .modal {
-  height: 100vh;
-  width: 100vw;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,12 +30,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 5vh 10vw;
+  background-color: #111;
+  padding: 5vh;
+  z-index: 1;
 }
 
 .modal .header {
-  background-color: #555;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,6 +44,8 @@ body {
           justify-content: space-between;
   height: 10vh;
   width: 100%;
+  background-color: #555;
+  z-index: 2;
 }
 
 .modal .header .title {
@@ -62,6 +69,7 @@ body {
   background-color: #777;
   color: limegreen;
   padding: 20px;
+  z-index: 2;
 }
 
 .modal .footer {
@@ -77,6 +85,7 @@ body {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #555;
+  z-index: 2;
 }
 
 .modal .footer button {
