--- a/src/react_TS/5_Modal/css/modal.sass
+++ b/src/react_TS/5_Modal/css/modal.sass
@@ -4,23 +4,34 @@
     box-sizing: border-box
 
 body
-    background-color: white
+    background-color: #333
 .modal
-    height: 100vh
-    width: 100vw
+    position: fixed
+    height: 100%
+    width: 100%
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
-    background-color: rgba(0,0,0,0.8)
-    padding: 5vh 10vw
-    // position: relative
+
+    background-color: #111
+    padding: 5vh 
+    z-index: 1
     .header
-        background-color: #555
+
         display: flex
         justify-content: space-between
-        height: 10vh    
+
+        height: 10vh
         width: 100%
+
+        background-color: #555
+        z-index: 2
         .title
             color: royalblue
             padding: 20px
@@ -33,16 +44,21 @@ body
     .content
         flex-grow: 1    
         width: 100%
+
         background-color: #777
         color: limegreen
         padding: 20px
-    .footer
+
+        z-index: 2
+    .footer        
         height: 10vh
         width: 100%
         display: flex
         flex-direction: column
         justify-content: space-around
         background-color: #555
+        z-index: 2
+         
         button
             align-self: flex-end
             padding: 5px 20px
