useIntersectrionObserver, add next 10 elements

--- a/src/react_TS/8_InfiniteHumanList/css/css.css
+++ b/src/react_TS/8_InfiniteHumanList/css/css.css
@@ -6,7 +6,7 @@ ul li p {
   font-size: 15px;
 }
 
-ul li:nth-child(10) {
+ul li:nth-child(10n) {
   color: red;
 }
 /*# sourceMappingURL=css.css.map */
