--- a/src/react_TS/8_InfiniteHumanList/css/css.sass
+++ b/src/react_TS/8_InfiniteHumanList/css/css.sass
@@ -4,6 +4,6 @@ ul
             font-size: 15px
         p
             font-size: 15px     
-    li:nth-child(10)
+    li:nth-child(10n)
         color: red
         
