--- a/src/react_TS/5_Modal/css/modal.css
+++ b/src/react_TS/5_Modal/css/modal.css
@@ -9,8 +9,34 @@ body {
   background-color: #333;
 }
 
+.modal__overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: royalblue;
+  padding: 5vh;
+  z-index: 1;
+}
+
 .modal {
-  position: fixed;
+  position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
@@ -32,7 +58,6 @@ body {
           align-items: center;
   background-color: #111;
   padding: 5vh;
-  z-index: 1;
 }
 
 .modal .header {
