--- a/src/react_TS/5_Modal/css/modal.sass
+++ b/src/react_TS/5_Modal/css/modal.sass
@@ -5,8 +5,25 @@
 
 body
     background-color: #333
+.modal__overlay
+    position: absolute
+    height: 100%
+    width: 100%
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+    background-color: royalblue
+    padding: 5vh 
+    z-index: 1
 .modal
-    position: fixed
+    position: absolute
     height: 100%
     width: 100%
     top: 0
@@ -21,7 +38,6 @@ body
 
     background-color: #111
     padding: 5vh 
-    z-index: 1
     .header
 
         display: flex
