--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
     background-color: #333;
     color: white;
     font-size: 2em;
+    box-sizing: border-box;
 }
 body a {
     color: white;
