--- a/src/react_TS/8_InfiniteHumanList_v2/css/style.sass
+++ b/src/react_TS/8_InfiniteHumanList_v2/css/style.sass
@@ -1,9 +1,7 @@
-ul
+.more-and-more-people  
     li
         h1
             font-size: 15px
-        p
-            font-size: 15px     
     li:nth-child(10n)
         color: red
         
