--- a/src/react_TS/16_ParallaxBgImg/css/style.css
+++ b/src/react_TS/16_ParallaxBgImg/css/style.css
@@ -1,6 +1,7 @@
 .parallax {
   background-color: #555;
+  position: absolute;
+  width: 100%;
   min-height: 200vh;
-  background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
