--- a/src/react_TS/16_ParallaxBgImg/css/style.sass
+++ b/src/react_TS/16_ParallaxBgImg/css/style.sass
@@ -1,4 +1,8 @@
 .parallax
   background-color: #555
+  position: absolute
+  width: 100%
   min-height: 200vh
-  background-size: cover
+  // background-size: cover
+  // background-position: center
+  
