--- a/src/react_TS/16_ParallaxBgImg/css/style.css
+++ b/src/react_TS/16_ParallaxBgImg/css/style.css
@@ -3,5 +3,7 @@
   position: absolute;
   width: 100%;
   min-height: 200vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 /*# sourceMappingURL=style.css.map */
