--- a/src/react_TS/16_ParallaxBgImg/css/style.sass
+++ b/src/react_TS/16_ParallaxBgImg/css/style.sass
@@ -3,6 +3,7 @@
   position: absolute
   width: 100%
   min-height: 200vh
-  // background-size: cover
+  background-size: cover
+  background-repeat: no-repeat
   // background-position: center
   
